--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "expo": "~51.0.17",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "fiction-expo-restart": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.2",
-    "expo-location": "~17.0.1"
+    "react-native": "0.74.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
